--- a/app/partials/controls/shortProductViewMinimal.html
+++ b/app/partials/controls/shortProductViewMinimal.html
@@ -15,8 +15,7 @@
             <div>
                 <p ng-bind-html="trustedDescription(LineItem.Product)" ng-show="LineItem.Product.Description" />
                 <p ng-show="LineItem.PriceSchedule.PriceBreaks[0]" ng-if="!(user.Permissions.contains('HidePricing'))">
-                    {{LineItem.PriceSchedule.PriceBreaks[0].Quantity}}
-                    <span ng-show="LineItem.Product.QuantityMultiplier > 1">(x {{LineItem.Product.QuantityMultiplier}})</span>
+                    {{LineItem.PriceSchedule.PriceBreaks[0].Quantity * (LineItem.Product.QuantityMultiplier)}}
                     <span>{{'for' | xlat}} {{LineItem.PriceSchedule.PriceBreaks[0].Price | culturecurrency}}</span>
                     <span ng-show="LineItem.PriceSchedule.PriceBreaks[0].Price == 0">$0.00</span>
                 </p>
