--- a/app/css/theme.css
+++ b/app/css/theme.css
@@ -3040,7 +3040,7 @@ font-weight: bold;
         line-height: 12px;
     }
 
-    .Weight, .ProductImage, .VibeItemID {
+    .Weight, .ProductImage, .VibeItemID, .fa-edit, .hidden {
         display: none !important;
     }
 
