--- a/app/partials/controls/shortProductViewMinimal.html
+++ b/app/partials/controls/shortProductViewMinimal.html
@@ -16,7 +16,7 @@
                 <p ng-bind-html="trustedDescription(LineItem.Product)" ng-show="LineItem.Product.Description" />
                 <p ng-show="LineItem.PriceSchedule.PriceBreaks[0]" ng-if="!(user.Permissions.contains('HidePricing'))">
                     {{LineItem.PriceSchedule.PriceBreaks[0].Quantity * (LineItem.Product.QuantityMultiplier)}}
-                    <span>{{'for' | xlat}} {{LineItem.PriceSchedule.PriceBreaks[0].Price | culturecurrency}}</span>
+                    <span>{{'for' | xlat}} {{LineItem.PriceSchedule.PriceBreaks[0].Price * (LineItem.PriceSchedule.PriceBreaks[0].Quantity) | culturecurrency}}</span>
                     <span ng-show="LineItem.PriceSchedule.PriceBreaks[0].Price == 0">$0.00</span>
                 </p>
                 <p ng-show="LineItem.Product.UnitOfMeasure">
