--- a/app/partials/copyrightView.html
+++ b/app/partials/copyrightView.html
@@ -4,6 +4,6 @@
     </p>
 </div>
 <div class="officeSuppliesContainer">
-    <a class="officeSupplies" href="https://vibenet.thalerus.com/Regency">Cancel order and return to office supplies</a>
+    <a class="officeSupplies" href="https://vibenet.thalerus.com/Regency">Cancel Order/Return To Login</a>
 </div>
 -->
