--- a/app/css/theme.css
+++ b/app/css/theme.css
@@ -2880,6 +2880,23 @@ font-weight: bold;
     background-color: #999;
 }
 
+	.product-variants {
+	    padding-left: 0 !important;
+	}
+	
+	.product-variants a {
+	    display: inline-block !important;
+	    width: 83.3333333%;
+	}
+	
+	.product-variants a:before {
+	    display: none;
+	}
+	
+	div.delete {
+	    float: right !important;
+	}
+
 @media (min-width: 768px) {
     .container,
     .container-view,
