--- a/app/partials/cartView.html
+++ b/app/partials/cartView.html
@@ -49,7 +49,7 @@
  -->
                                  <div>
                                      <h3  class="text-primary">
-                                         {{item.ProductIDText}}
+                                         {{item.Product.Name}}
                                      </h3>
 <!-- Hide Product ID 
                                      <p>
@@ -66,7 +66,7 @@
                              </div>
                              <div  class="col-md-6"  ng-if="currentOrder.Status  ==  'AwaitingApproval'">
                                  <h3  class="text-primary">
-                                     {{item.ProductIDText}}
+                                     {{item.Product.Name}}
                                  </h3>
 <!-- Hide Product ID 
                                      <p>
@@ -257,6 +257,3 @@
 	 </form>
      <cartprint  class="visible-print"  />
  </section>
-
-
- <!--updated  for  custom.css  -  bb  -->
