--- a/app/css/theme.css
+++ b/app/css/theme.css
@@ -3072,7 +3072,7 @@ font-weight: bold;
         line-height: 12px;
     }
 
-    .Weight, .ProductImage, .VibeItemID, .fa-edit, .hidden {
+    .Weight, .ProductImage, .VibeItemID, .fa-edit, .hidden, .keyword {
         display: none !important;
     }
 
