--- a/app/partials/cartView.html
+++ b/app/partials/cartView.html
@@ -51,6 +51,7 @@
                                      <h3  class="text-primary">
                                          {{item.Product.Name}}
                                      </h3>
+					 <h5 class="text-primary">{{item.Variant.ExternalID}}</h5>
 <!-- Hide Product ID 
                                      <p>
                                          {{item.ProductIDText}}
@@ -68,6 +69,7 @@
                                  <h3  class="text-primary">
                                      {{item.Product.Name}}
                                  </h3>
+				     <h5 class="text-primary">{{item.Variant.ExternalID}}</h5>
 <!-- Hide Product ID 
                                      <p>
                                          {{item.ProductIDText}}
