--- a/app/css/theme.css
+++ b/app/css/theme.css
@@ -105,6 +105,13 @@ a.text-info:hover {
 a.text-warning:hover {
   color: #f33;
 }
+.warning {
+  color: #d00;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+}
 .text-danger {
   color: #f66;
 }
