--- a/app/partials/cartView.html
+++ b/app/partials/cartView.html
@@ -49,7 +49,7 @@
  -->
                                  <div>
                                      <h3  class="text-primary">
-                                         {{item.Product.Name}}
+                                         <a ng-href="product/{{item.Product.InteropID}}">{{item.Product.Name}}</a>
                                      </h3>
 					 <h5 class="text-primary">{{item.Variant.ExternalID}}</h5>
 <!-- Hide Product ID 
