--- a/app/css/theme.css
+++ b/app/css/theme.css
@@ -3068,7 +3068,7 @@ font-weight: bold;
     
     .spec-group-item {
         position: relative;
-        margin-bottom: -4px;
+        padding: 1px 0;
         border: none;
     }
 
